--- a/FinalProject.qmd
+++ b/FinalProject.qmd
@@ -8,18 +8,56 @@ editor:
     wrap: sentence
 ---
 
-## Data Visualization 1
+## Introduction
 
-```{r}
+Understanding how demographic, economic, and health variables interact with each other is essential for evaluating the development of countries and informing future policy.
+This project uses the countryData dataset from the dcData package to conduct an exploratory data analysis of countries’ attributes such as population, education, public health, and macroeconomic conditions.
+We used data visualizations to identify patterns and relationships across multiple variables within our data.
+By displaying multivariate data visualizations and descriptive statistics using the tidyverse and ggplot2 packages, we highlighted how complex attributes such as population growth, economic stability, and health are shaped by many connected factors.
+
+## Summary Table
+
+This table includes a summary of the descriptive statistics we chose to look at for this project.
+
+```{r setup, include=FALSE}
 #| echo: false
-
+summary_tbl
 ```
 
-## Data Visualization 2
+## Population vs. Birth Rate
 
-```{r}
+```{r setup, include=FALSE}
 #| echo: false
+birth_rate
+```
 
+## Country Data by Continent
+
+```{r setup, include=FALSE}
+#| echo: false
+country_by_continent
+```
+
+## Health Spending, Life Expectancy, Infant Mortality
+
+This plot illustrates the strong inverse relationship between the infant mortality rate and life expectancy of a country, incorporating health spending.
+Countries that invest more heavily in healthcare tend to have lower infant mortality and longer lifespans.
+This reflects real world access to medical services, emphasizing how public policy choices have a direct influence on population health outcomes.
+
+```{r setup, include=FALSE}
+#| echo: false
+health_visualization
+```
+
+## GDP, Unemployment, Inflation
+
+This plot explores macroeconomic stability by examining unemployment rates and inflation, with GDP representing the overall economic scale of a country.
+Larger economies may better absorb any economic shocks, while smaller economies often face greater volatility.
+High unemployment combined with high inflation can significantly reduce quality of life for a population and limit policy options.
+
+```{r setup, include=FALSE}
+#| echo: false
+gdp_visualization
 ```
 
 ## FAIR and CARE Principles
@@ -54,8 +92,133 @@ responsibility: When using this data, we ensured that any representation of data
 ethics: The datasets provide an accurate and fair view of all countries represented.
 This minimizes harm and maximizes benefit as it does not stigmatize Indigenous communities and represents all communities fairly.
 
+## Conclusion
+
+Through multivariate visualizations and descriptive statistics, this exploratory data analysis reveals clear and consistent relationships among attributes of countries.
+The results suggest that investments in healthcare and education are strongly associated with improved life expectancy, reduced infant mortality, and greater countrywide stability.
+Macroeconomic patterns such as unemployment and inflation vary with the economic scale of a country.
+Our findings do not suggest complete causation, but they generate hypotheses for potential confirmatory data analysis.
+The data analysis emphasizes the value of looking into multiple variables when interpreting nationwide outcomes and establishes the role of data visualization as a powerful tool for understanding complex systems.
+
 ## Code Appendix
 
 ```{r}
+# Load all necessary packages
+library(tidyverse) 
+library(ggplot2)
+library(ggpubr)
+library(jpeg)
+library(dcData)
+library(kableExtra)
+library(rvest)
+library(readxl)
+library(tibble)
+library(dcData)
+
+# Upload world map image
+img <- readJPEG("C:/Users/pacad/Downloads/WorldMap.jpg")
+
+# Select large countries
+countries <- CountryData %>%
+  select(c(country, birth, pop)) %>%
+  filter(pop > 100000)
+
+locations <- CountryCentroids %>%
+  select(c(name, long, lat)) %>%
+  rename(country = name)
+
+dataPolished <- left_join( 
+  x = countries,
+  y = locations,
+  by = join_by(country == country)
+)
+
+# Create Population vs. Birth Rate visualization
+birth_rate <- ggplot(
+  data = dataPolished,
+  mapping = aes(
+    x = long,
+    y = lat,
+    size = pop/1000000,
+    color = birth
+  )) + 
+  background_image(img) +
+  geom_point() + 
+  coord_cartesian(xlim = c(-180,180), ylim = c(-90,90)) + 
+  scale_color_gradient(low = 'red', high = 'blue') + 
+  labs(
+    x = "Longitude",
+    y = "Latitude",
+    title = "Map of Population and Birth Rate",
+    color = "Births per 1000 People",
+  ) + 
+  guides(size = 'none')
+
+# Read Country By Continent file
+continents <- read_excel("C:/Users/pacad/Downloads/CountryByContinent.xlsx") %>%
+  add_row(Brazil = "Brazil", `South America` = "South America", .before = 1) %>%
+  rename(
+    "country" = "Brazil",
+    "continent" = "South America"
+  )
+
+countries <- CountryData
+
+# Tidy country data
+polished <- countries %>%
+  select(c(1:6),12,16,18,26) %>%
+  left_join(continents, by = "country") %>%
+  drop_na() %>%
+  rename("Continent" = "continent") %>%
+  group_by(Continent) %>%
+  summarise(
+    Area_mean = mean(area),
+    Pop_mean = mean(pop),
+    Growth_mean = mean(growth),
+    Birth_mean = mean(birth),
+    Death_mean = mean(death),
+    Health_mean = mean(health),
+    Obesity_mean = mean(obesity),
+    Educ_mean = mean(educ),
+    Unemployment_mean = mean(unemployment)
+  )
+
+country_by_continent <- polished %>%
+  kable( # Make table
+    caption = "Country Data Summary Statistics, Grouped By Continent", # Add title
+    align = c("l", rep("c", 6)) # Control the text alignment in each column
+  ) %>%
+  kable_classic(font_size = 16, lightable_options = "striped" )
+
+
+# Select key variables for summary
+summary_stats <- CountryData %>%
+  select(area, pop, growth, birth, death, health, obesity, educ, unemployment, life, infant, underweight) 
+
+# Create summary table for data
+summary_tbl <- psych::describe(summary_stats)
+
+# Create Health Spending, Infant Mortality, and Life Expectancy visualization
+health_visualization <- CountryData %>%
+  drop_na(infant, life, health) %>%   # Drop missing values for relevant variables
+  ggplot(aes(x = infant, y = life)) +
+  geom_point(aes(size = health), alpha = 0.7) +
+  labs(
+    title = "Health Spending and Population Health Outcomes",
+    x = "Infant Mortality Rate",
+    y = "Life Expectancy (years)",
+    size = "Health Spending")
+
+# Create GDP, Inflation, and Unemployment visualization
+  gdp_visualization <- CountryData %>%
+  drop_na(GDP, unemployment, inflation) %>%   # Drop missing values for relevant variables
+  ggplot(aes(x = unemployment, y = inflation)) +
+  geom_point(aes(size = GDP), alpha = 0.7) +
+  labs(
+    title = "Macroeconomic Conditions by Economic Size of Country",
+    x = "Unemployment Rate",
+    y = "Inflation Rate",
+    size = "Gross Domestic Product"
+  )
 
 ```
